# QT-Clothes-Dressup

./: .gitignore  CMakeLists.txt  core.cpp
include/: clothe_classifiers.h  config_reader.h  database_postgres.h  database_system.h  main_window.h
src/: CMakeLists.txt  clothe_classifiers.cpp  config_reader.cpp  database_postgres.cpp  main_window.cpp
